p4-translation/tests/xc_ArrayEmpty.mj.err
 line 1, column 5: error: variable has empty type (v)
