p4-translation/tests/xc_ArrayEmpty.mj
var v: [0]int;
